# Agents-M365Copilot

./: .gitignore  .release-please-manifest.json  README.md  package-lock.json  release-please-config.json
.azure-pipelines/: cd-build-deploy-dotnet-beta.yml  cd-build-deploy-dotnet-core.yml  cd-build-deploy-dotnet-v1.yml  cd-build-deploy-dotnet.yml  cd-build-deploy-python-beta.yml  cd-build-deploy-python-core.yml  cd-build-deploy-python-v1.yml  cd-build-deploy-python.yml  cd-build-deploy-typescript-beta.yml  cd-build-deploy-typescript-core.yml  cd-build-deploy-typescript-v1.yml  cd-build-deploy-typescript.yml  ci-build.yml  deploy.yml
.azure-pipelines/templates/: esrp-codesign-dll.yml  esrp-codesign-nuget.yml  esrp-strongname.yml
.config/1espt/: PipelineAutobaseliningConfig.yml
.github/: CODEOWNERS  dependabot.yml
.github/policies/: agents-m365copilot-sdks-beta-branch-protection.yml
.github/workflows/: build-and-test-dotnet-core.yml  build-and-test-python-beta.yml  build-and-test-python-core.yml  build-and-test-python-v1.yml  build-and-test.yml  release-please-gha.yml
copilot-search-api/: API_TESTING.md  examples.js  search.js
dotnet/: .gitignore  Directory.Build.props  Directory.Packages.props  Microsoft.Agents.M365Copilot.sln  Microsoft.Copilot.ControlSystems.Beta.sln  README.md
dotnet/src/Microsoft.Agents.M365Copilot.App/: AuthConfig.cs  Microsoft.Agents.M365Copilot.App.csproj  Program.cs
dotnet/src/Microsoft.Agents.M365Copilot.Beta/: AgentsM365CopilotBetaServiceClient.cs  AgentsM365CopilotServiceClient.cs  CHANGELOG.md  Microsoft.Agents.M365Copilot.Beta.csproj  README.md
openapi/: README.md
python/: .gitignore  README.md  project-configs.json  pyproject.toml  requirements-dev.txt  requirements_dev.txt
python/copilot_control_systems/: __init__.py
python/microsoft_agents_m365copilot_beta/: __init__.py  _version.py  agents_m365_copilot_beta_request_adapter.py  agents_m365_copilot_beta_service_client.py  agents_m365_copilot_beta_systems_client.py  request_adapter.py  service_client.py
python/microsoft_agents_m365copilot_core/: README.md  __init__.py  pyproject.toml  requirements-dev.txt
python/microsoft_agents_m365copilot_core/docs/design/: client_factory.puml
python/microsoft_agents_m365copilot_core/samples/: client_factory_samples.py  client_samples.py  retry_handler_samples.py
python/microsoft_agents_m365copilot_core/samples/batch_requests/: batch_request_with_collection.py  batch_request_with_content.py  batch_request_with_custom_error_class.py  batch_request_with_parsable_as_response_type.py
python/microsoft_agents_m365copilot_core/src/: __init__.py  _constants.py  base_request_adapter.py  client_factory.py
python/microsoft_agents_m365copilot_core/src/authentication/: azure_identity_authentication_provider.py
python/microsoft_agents_m365copilot_core/src/middleware/: __init__.py  async_transport.py  request_context.py  telemetry.py
python/microsoft_agents_m365copilot_core/src/middleware/options/: __init__.py  agents_copilot_telemetry_handler_option.py
python/microsoft_agents_m365copilot_core/src/models/: __init__.py
python/microsoft_agents_m365copilot_core/src/requests/: __init__.py  batch_request_item.py
python/microsoft_agents_m365copilot_core/src/tasks/: large_file_upload.py  page_iterator.py
python/microsoft_agents_m365copilot_core/tests/: conftest.py  test_base_graph_request_adapter.py  test_base_request_adapter.py  test_client_factory.py  test_graph_client_factory.py
python/microsoft_agents_m365copilot_core/tests/authentication/: test_azure_identity_authentication_provider.py
python/microsoft_agents_m365copilot_core/tests/middleware/: test_async_graph_transport.py  test_graph_telemetry_handler.py
python/microsoft_agents_m365copilot_core/tests/middleware/options/: test_graph_telemetry_handler_options.py  test_telemetry_handler_options.py
python/microsoft_agents_m365copilot_core/tests/requests/: test_batch_request_content.py  test_batch_request_content_collection.py  test_batch_request_item.py  test_batch_response_content.py  test_batch_response_item.py
python/microsoft_agents_m365copilot_core/tests/tasks/: test_page_iterator.py  test_page_result.py
python/sample/: .env.template  README.md
python/samples/: README.md  backend.py  frontend.py
typescript/: .gitignore  .prettierignore  README.md  lerna.json  package-lock.json  package.json  prettier.config.cjs  tsconfig.json
(+196 files in other folders)
