[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "copilot-control-systems-beta"
# The SDK version
# x-release-please-start-version
version = "1.0.0"
# x-release-please-end
authors = [{name = "Microsoft", email = "graphtooling+ccspython@microsoft.com"}]
description = "The Microsoft CCS Python SDK"
dependencies = [
    "azure-identity >=1.12.0",
    "microsoft-kiota-serialization-json >=1.8.0,<2.0.0",
    "microsoft-kiota-serialization-text >=1.8.0,<2.0.0",
    "microsoft-kiota-serialization-form >=1.8.0,<2.0.0",
    "microsoft-kiota-serialization-multipart >=1.8.0,<2.0.0"

]
requires-python = ">=3.9"
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["copilot", "openAPI", "Microsoft"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = ["yapf", "bumpver", "isort", "pylint", "pytest", "mypy"]

[project.urls]
homepage = "https://github.com/microsoft/ccs-beta-sdk-python#readme"
repository = "https://github.com/microsoft/ccs-beta-sdk-python"
documentation = "https://github.com/microsoft/ccs-beta-sdk-python/docs"

[tool.flit.module]
name = "copilot_control_systems"

[tool.mypy]
warn_unused_configs = true
files = "copilot_control_systems"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "copilot_control_systems.generated"
ignore_errors = true

[tool.yapf]
based_on_style = "pep8"
dedent_closing_brackets = true
each_dict_entry_on_separate_line = true
column_limit = 100

[tool.isort]
profile = "hug"

[tool.pytest.ini_options]
pythonpath = [
  "copilot_control_systems"
]

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"copilot_control_systems/_version.py" = ["{version}"]